--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content=., initial-scale=1.0>
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="header">
@@ -41,12 +41,12 @@
                 can paste in the embed code for the video yu want to add.
             </p>
          </div> 
-            <img src="./1629201947754_IMG-20210817-WA0012.jpg" width="300px" height="auto">
+            <img src="1629201947754_IMG-20210817-WA0012.jpg" width="300px" height="auto">
      </div>
 
     <div id="continer2">
         <div id="img1">
-            <img src="./IMG-20210817-WA0010 (1).jpg">
+            <img src="IMG-20210817-WA0010 (1).jpg">
 
         </div>
 
@@ -62,7 +62,7 @@
         </div>
 
         <div id="box2">
-            <img src="./IMG-20210817-WA0030.jpg" alt="img1" >
+            <img src="IMG-20210817-WA0030.jpg" alt="img1" >
         </div>
 
     </div>
